--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -3,7 +3,6 @@
  /*----------header----------*/
 
  .header{
-	@include povh('');
 	padding: 40px 0 0 0;
  }
  	.logo{
@@ -28,6 +27,9 @@
 			}
 		}
  	}
+ 	.menu_block{
+ 		position: static;
+ 	}
  	.menu{
  		li{
  			display: inline-block;
@@ -44,6 +46,50 @@
  			}
  		}
  	}
+ 			.dropdown{
+				top: 90px;
+				left: 0;
+				width: 100%;
+				padding: 80px 0;
+				border: none;
+				box-shadow: none;
+				strong, ol{
+					display: block;
+					width: 25%;
+					box-sizing: border-box;
+					float: left;
+					height: 81px;
+				}
+				ol{
+					padding-left: 15px;
+					border-left: 1px solid #979594;
+					li{
+						display: block;
+						a{
+							color: #1c211d;
+							font-size: 11px;
+							text-transform: uppercase;
+							font-weight: normal;
+						}
+					}
+				}
+				strong{
+					font-size: 40px;
+					color: #202427;
+					font-weight: bold;
+					a{
+						font-size: 40px;
+						text-decoration: none;
+						border-bottom: 1px solid #a8a8a8;
+						&:hover{
+							text-decoration: none;
+							border-bottom-color: #fff;
+						}
+					}
+				}
+ 			}
+
+
  	.francaise{
  		display: block;
  		padding: 15px 0 0 0;
@@ -160,3 +206,125 @@
  }
 
 /*----------end footer----------*/
+
+/*-----------services----------*/
+.services_wrap{
+	position: relative;
+}
+	.services_block.white{
+		padding: 35px 15px;
+		background:#fff;
+		h1{
+			padding-bottom: 22px;
+			font-size: 41px;
+			line-height: 1.1;
+			font-weight: 300;
+			color: #2b2b2b;
+			font-style: normal;
+			font-family: $ffamily;
+			strong{
+				display: block;
+				font-weight: 500;
+			}
+		}
+		line-height: 24px;
+		font-size: 22px;
+		color: #262821;
+		font-style: italic;
+		font-weight: bold;
+		font-family: $fontfamily;
+		position: relative;
+		line-height: 1.3;
+		
+	}
+	.services_block.whiteimg{
+		&:before{
+			content: '';
+			position: absolute;
+			top: -20px;
+			left: 45%;
+			@include arr(25,20, #fff, t);
+		}
+	}
+	.services_img{
+		width: 100%;
+		padding-bottom: 5px
+	}
+	.services_block{
+		margin-bottom: 15px;
+		position: relative;
+		padding: 15px 28px;
+		background:#e9e9e9;
+		h6{
+			color: #262821;
+			font-size: 22px;
+			font-style: italic;
+			font-weight: bold;
+			padding-bottom: 10px;
+			margin-bottom: 15px;
+			line-height: 1.5;
+			border-bottom: 1px solid #cccccc;
+			font-family: $fontfamily;
+		}
+		section{
+			color: #555555;
+			font-size: 16px;
+			p{
+				padding-bottom: 10px;
+			}
+			& > a{
+				font-size: 11px;
+				color: #2b2b2b;
+				display: block;
+				padding-top: 10px;
+			}
+		}
+		dl{
+			dt{
+				display: block;
+				font-size: 11px;
+				text-transform: uppercase;
+				font-weight: bold;
+				color: #2b2b2b;
+				padding-bottom: 10px;
+			}
+			dd{
+				padding-bottom: 12px;
+				float: none;
+				display: block;
+			}
+		}
+		h5{
+			color: #262821;
+			font-size: 18px;
+			font-weight: bold;
+			margin-bottom: 15px;
+			line-height: 1.5;
+			font-family: $fontfamily;	
+		}
+		p{
+			color: #525354;
+			line-height: 1.3;
+		}
+	}
+		.share{
+			padding: 12px 0 0 0;
+			margin: 12px 0 0 0;
+			border-top: 1px solid #cccccc;
+			font-size: 10px;
+			font-weight: bold;
+			font-style: italic;
+			color: #555555;
+			font-family: $fontfamily;
+			nav{
+				display: inline-block;
+				vertical-align: middle;
+			}
+		}
+/*----------end-services----------*/
+
+/*----------portfolio----------*/
+.portfolio_slider{
+	padding-bottom: 31px;
+}
+/*----------end-portfolio----------*/
